// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header:  correctly renders 1`] = `
<header
  className="page-header "
>
  <div
    className="container"
  >
    <Link
      className="logo"
      to="/"
    >
      WTW
    </Link>
    <div
      className="page-header__menu-wrapper"
    >
      <nav>
        <ul
          className="page-nav"
        >
          <li
            className="page-nav__item"
          >
            <Link
              className="page-nav__link"
              to="/movie/1"
            >
              Movies
            </Link>
          </li>
          <li
            className="page-nav__item"
          >
            <Link
              className="page-nav__link"
              to="/tv/1"
            >
              TV Shows
            </Link>
          </li>
        </ul>
      </nav>
      <SearchBar
        closeMobileNav={[Function]}
      />
    </div>
    <button
      className="page-nav__hamburger-button"
      onClick={[Function]}
      type="button"
    >
      <span />
    </button>
  </div>
</header>
`;

exports[`Header:  open mobile menu 1`] = `
<header
  className="page-header page-header__show-menu"
>
  <div
    className="container"
  >
    <Link
      className="logo"
      to="/"
    >
      WTW
    </Link>
    <div
      className="page-header__menu-wrapper"
    >
      <nav>
        <ul
          className="page-nav"
        >
          <li
            className="page-nav__item"
          >
            <Link
              className="page-nav__link"
              to="/movie/1"
            >
              Movies
            </Link>
          </li>
          <li
            className="page-nav__item"
          >
            <Link
              className="page-nav__link"
              to="/tv/1"
            >
              TV Shows
            </Link>
          </li>
        </ul>
      </nav>
      <SearchBar
        closeMobileNav={[Function]}
      />
    </div>
    <button
      className="page-nav__hamburger-button"
      onClick={[Function]}
      type="button"
    >
      <span />
    </button>
  </div>
</header>
`;
